src/objects/Required_Document__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>Is_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to send email</description>
        <label>Is Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Required_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppo_Email_Address__c</fullName>
        <label>Oppo Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oppo_Email__c</fullName>
        <formula>acfOpportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppo Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDocument_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Document Master</label>
        <referenceTo>Document_Master__c</referenceTo>
        <relationshipName>Required_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Required_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfStatus__c</fullName>
        <description>Click Loans</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acf_Bank_Statement_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bank Statement Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Is_Identity_Verification_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Identity Verification Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Reference_No__c</fullName>
        <description>Click Loans</description>
        <label>Reference No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Click Loans Required Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfDocument_Master__c</columns>
        <columns>Lead__c</columns>
        <columns>acfOpportunity__c</columns>
        <columns>acfStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Required_Docs_Uploaded_Verified</fullName>
        <columns>NAME</columns>
        <columns>acfDocument_Master__c</columns>
        <columns>Lead__c</columns>
        <columns>acfOpportunity__c</columns>
        <columns>acfStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acfStatus__c</field>
            <operation>equals</operation>
            <value>Verified,Uploaded</value>
        </filters>
        <label>Required Docs - Uploaded / Verified</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Document_name_rule_for_hardcoded_names</fullName>
        <active>false</active>
        <errorConditionFormula>If(AND(ISCHANGED(Name),OR((PRIORVALUE(Name) = &apos;Bank Stmt&apos;),(PRIORVALUE(Name) = &apos;Identity Verification&apos;))),true,false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You don&apos;t have access to edit this field.</errorMessage>
    </validationRules>
</CustomObject>